--- a/index.Rmd
+++ b/index.Rmd
@@ -549,7 +549,7 @@ ggplot(value_pick_nba, aes(geometry=geom, fill = finalMeanValuePick)) +
   scale_fill_viridis_c(option = "blues", direction = -1)
 ```
 
-```{r echo=FALSE, message=FALSE, warning = FALSE}
+```{r echo=FALSE, message=FALSE}
 #creating a table to display the top 3 value picks from each State
 
 top_valuepicks <- nba_team_states %>%
@@ -568,6 +568,7 @@ top_valuepicks_print <- top_valuepicks %>%
   rename(State = 'ID')
 
 final_valuepicks_display <- top_valuepicks_print[, c("Pick", "Franchise", "Player", "College", "NBA Team(s)", "State", "valuepick")]
+print(Valuepicks_display)
 ```
 ## Analysis
   
